<resources>
    <string name="app_name">WorkAssist</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_create_one_here"><![CDATA[Don\'t have an Account? Create one here —>]]></string>
    <string name="signin">SignIn</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="members_signin">Member\'s SignIn</string>
    <string name="customers_signin">Customer\'s SignIn</string>
    <string name="signup">SignUp</string>
    <string name="customer_signin">Customer SignIn</string>
    <string name="member_signin">Member SignIn</string>
    <string name="username">Username</string>
    <string name="customer_signup">CUSTOMER SIGNUP</string>
    <string name="member_signup">MEMBER SIGNUP</string>
    <string name="name">Name</string>
    <string name="members_signup">Member\'s SignUp</string>
    <string name="customers_signup">Customer\'s SignUp</string>
    <string name="email_id">Email ID</string>
    <string name="mobile">Mobile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="area_pin_code">Area Pin Code</string>
    <string name="work">Work</string>
    <string name="already_have_an_account_login_here"><![CDATA[Already have an account? Login here —>]]></string>
    <string name="carpenter">Carpenter</string>
    <string name="plumber">Plumber</string>
    <string name="painter">Painter</string>
    <string name="gardener">Gardener</string>
    <string name="cleaner">Cleaner</string>
    <string name="electrician">Electrician</string>
    <string name="barber">Barber</string>
    <string name="please_choose_the_work_and_enter_your_area_s_pincode_to_proceed">Please choose your profession and enter your area\'s pincode to proceed.</string>
    <string name="please_choose_the_work_and_enter_your_area_s_pincode_to_proceed2">Please choose the work and enter your area\'s pincode to proceed.</string>
    <string name="submit">Submit</string>
    <string name="available">Available</string>
    <string name="not_available">Not-Available</string>
    <string name="please_update_your_availability_below_your_details_will_not_be_shows_to_the_customers_when_you_are_unavailable">Please update your availability below.\nYour details will not be shows to the customers when you are unavailable.</string>
    <string name="edit_account_details">Edit account details</string>
    <string name="logout">Logout</string>
    <string name="please_update_your_details_below">Please update your details below.</string>
    <string name="select_the_professions_below">Select the professions below:</string>
    <string name="others">Others</string>
    <string name="x">X</string>
    <string name="logo">Logo</string>

</resources>