<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemberHomeActivity">

    <RadioGroup
        android:id="@+id/rg_member_availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_member_home">

        <RadioButton
            android:id="@+id/rb_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available" />

        <RadioButton
            android:id="@+id/rb_unavailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_available" />
    </RadioGroup>

    <Button
        android:id="@+id/b_submit"
        android:layout_width="134dp"
        android:layout_height="54dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="332dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_member_availability" />

    <TextView
        android:id="@+id/tv_member_home"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="24dp"
        android:text="@string/please_update_your_availability_below_your_details_will_not_be_shows_to_the_customers_when_you_are_unavailable"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/rg_member_availability"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="131dp"
        android:layout_marginBottom="100dp"
        android:text="@string/not_available"
        android:textColor="@android:color/holo_red_light"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_member_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>